HTML & CSS Dojo I - The Top Section

--- a/HTML & CSS Dojo I/stylesheet.css
+++ b/HTML & CSS Dojo I/stylesheet.css
@@ -47,3 +47,19 @@ li {
   float: left;
   padding: 33px 20px;
 }
+
+.main {
+  padding: 100px 80px;
+}
+
+.copy-container h1 {
+  font-size: 140px;
+}
+
+.copy-container h2 {
+  font-size: 60px;
+}
+
+.copy-container span {
+  color: #ff4a4a;
+}
