--- a/HTML & CSS Dojo I/stylesheet.css
+++ b/HTML & CSS Dojo I/stylesheet.css
@@ -85,3 +85,22 @@ li {
   font-size: 24px;
   margin-top: 30px;
 }
+
+.contact-form {
+  padding-top: 100px;
+}
+
+input,
+textarea {
+  width: 400px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  padding: 20px;
+  font-size: 18px;
+  border: 1px solid #dee7ec;
+}
+
+.contact-submit {
+  background-color: #dee7ec;
+  color: #889eab;
+}
