--- a/HTML & CSS Dojo I/stylesheet.css
+++ b/HTML & CSS Dojo I/stylesheet.css
@@ -104,3 +104,23 @@ textarea {
   background-color: #dee7ec;
   color: #889eab;
 }
+
+.footer {
+  background-color: #2f5167;
+  color: #fff;
+  height: 120px;
+  padding: 40px;
+}
+
+.footer-logo {
+  float: left;
+  font-size: 32px;
+}
+
+.footer-list {
+  float: right;
+}
+
+.footer-list li {
+  padding-bottom: 20px;
+}
