--- a/HTML & CSS Dojo II/stylesheet.css
+++ b/HTML & CSS Dojo II/stylesheet.css
@@ -185,3 +185,16 @@ header {
   top: 7px;
   box-shadow: none;
 }
+
+footer img {
+  width: 124px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+}
+
+footer {
+  padding-top: 30px;
+}
