--- a/HTML & CSS Dojo III/responsive.css
+++ b/HTML & CSS Dojo III/responsive.css
@@ -3,6 +3,15 @@
   .top-wrapper h1 {
     font-size: 32px;
   }
+
+  .heading h2 {
+    font-size: 20px;
+  }
+
+  .lesson {
+    width: 50%;
+    margin-bottom: 50px;
+  }
 }
 
 /* For Smartphones */
@@ -35,5 +44,9 @@
   .top-wrapper p {
     font-size: 14px;
     line-height: 20px;
+  }
+
+  .lesson {
+    width: 100%;
   }
 }
